# terminal-chess

./: CMakeLists.txt  README.md
include/: Board.h  Game.h  Piece.h  Player.h  Square.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
include/Players/: Enemy.h  User.h
include/enums-structs/: Color.h  Position.h  Types.h
src/: Board.cpp  Game.cpp  Piece.cpp  Player.cpp  Square.cpp  main.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/Players/: Enemy.cpp  User.cpp
